MyOrg/src/objects/Reviews__c.object
<CustomObject>
    <fields>
        <fullName>Commented_By__c</fullName>
        <label>Commented By</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Products__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Products</label>
        <referenceTo>Products__c</referenceTo>
        <relationshipLabel>Reviews</relationshipLabel>
        <relationshipName>Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Reviews</label>
    <nameField>
        <displayFormat>Rv-{0000}</displayFormat>
        <label>Reviews Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>